[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
adapteros-sbom = { path = "../crates/adapteros-sbom" }
adapteros-core = { path = "../crates/adapteros-core" }
adapteros-lora-worker = { path = "../crates/adapteros-lora-worker" }
cargo-lock = "9.0"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
walkdir = "2.4"
tempfile = "3.8"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
# Removed: adapteros-single-file-adapter (migrated to adapteros-aos)
