[package]
name = "adapteros-agent-spawn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-agent spawn system for parallel code modification strategies"

[dependencies]
adapteros-core = { path = "../adapteros-core" }
adapteros-deterministic-exec = { path = "../adapteros-deterministic-exec" }
adapteros-uds-protocol = { path = "../adapteros-uds-protocol" }
adapteros-telemetry = { path = "../adapteros-telemetry" }
adapteros-config = { path = "../adapteros-config" }

tokio = { workspace = true, features = ["full", "process"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
