[package]
name = "adapteros-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tower = "0.4"
tower-http = "0.5"  # limit feature included
prometheus = { workspace = true }
uuid = { version = "1.7", features = ["v4"] }
hyper-util = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
# Local deps (path-based)
adapteros-core = { path = "../adapteros-core" }
adapteros-lora-worker = { path = "../adapteros-lora-worker" }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util"] }
tempfile = "3.0"
