[package]
name = "adapteros-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adapteros-core = { path = "../adapteros-core" }
adapteros-api-types = { path = "../adapteros-api-types" }
adapteros-lora-worker = { path = "../adapteros-lora-worker" }
adapteros-lora-kernel-mtl = { path = "../adapteros-lora-kernel-mtl" }
adapteros-lora-kernel-api = { path = "../adapteros-lora-kernel-api" }
adapteros-deterministic-exec = { path = "../adapteros-deterministic-exec" }
adapteros-telemetry = { path = "../adapteros-telemetry" }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true, features = ["util"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }

[dev-dependencies]
adapteros-server-api = { path = "../adapteros-server-api" }
