[package]
name = "adapteros-artifacts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adapteros-core = { path = "../adapteros-core" }
adapteros-crypto = { path = "../adapteros-crypto" }
adapteros-storage = { path = "../adapteros-storage" }
adapteros-sbom = { path = "../adapteros-sbom" }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
base64 = "0.22"
uuid = { workspace = true }
reqwest = { workspace = true }
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }
core-foundation = { workspace = true }
[dev-dependencies]
tempfile = { workspace = true }
