[package]
name = "adapteros-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Centralized authentication configuration and enforcement for AdapterOS"

[dependencies]
# Internal crates
adapteros-core = { path = "../adapteros-core" }
adapteros-config = { path = "../adapteros-config" }
adapteros-crypto = { path = "../adapteros-crypto" }
# Serialization
serde = { workspace = true }
serde_json = "1.0"
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
# HTTP status codes
axum = { workspace = true }
# Crypto
blake3 = { workspace = true }
jsonwebtoken = "9.3"
# Time
chrono = { version = "0.4", features = ["serde"] }
# Logging
tracing = "0.1"
# UUID
uuid = { version = "1.10", features = ["v4", "v7"] }
[dev-dependencies]
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
[features]
default = []
# Dev bypass allows insecure auth modes (debug builds only)
dev-bypass = []
[lib]
name = "adapteros_auth"
path = "src/lib.rs"
