[package]
name = "adapteros-autograd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
adapteros-core = { path = "../adapteros-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# Math and computation
ndarray = "0.15"
rand.workspace = true
rand_chacha = "0.3"

# Utilities
tracing.workspace = true
parking_lot.workspace = true
smallvec.workspace = true

[dev-dependencies]
tempfile.workspace = true
