[package]
name = "adapteros-base-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Base LLM integration for adapterOS Layer 1"

[dependencies]
# Internal crates
adapteros-core = { path = "../adapteros-core" }
adapteros-config = { path = "../adapteros-config" }
adapteros-deterministic-exec = { path = "../adapteros-deterministic-exec" }
adapteros-trace = { path = "../adapteros-trace" }
# Workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
# Additional dependencies
tracing = { workspace = true }
uuid = { version = "1.6", features = ["v7"] }
chrono = "0.4"
parking_lot = "0.12"
