[package]
name = "adapteros-boot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Boot lifecycle management for adapterOS - phase-gated startup and worker auth"

[dependencies]
# Internal crates - NO axum, tower, or hyper dependencies
adapteros-core = { path = "../adapteros-core" }
adapteros-config = { path = "../adapteros-config" }
# Crypto
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
# Async
tokio = { version = "1.35", features = ["sync", "time", "fs"] }
# Serialization
serde = { workspace = true }
serde_json = "1.0"
serde_jcs = { workspace = true }
# Time
chrono = { version = "0.4", features = ["serde"] }
# Logging
tracing = "0.1"
# LRU cache for jti replay defense
lru = "0.16"
# Base64 for JWT encoding
base64 = "0.22"
hex = { workspace = true }
# UUID for nonce generation
uuid = { version = "1.10", features = ["v4"] }
[dev-dependencies]
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
tempfile = "3.25"
[lib]
name = "adapteros_boot"
path = "src/lib.rs"
