[package]
name = "adapteros-cdp"
version.workspace = true
edition = "2021"

[dependencies]
adapteros-core = { path = "../adapteros-core" }
adapteros-git = { path = "../adapteros-git" }
adapteros-lora-worker = { path = "../adapteros-lora-worker" }
serde = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
