[package]
name = "adapteros-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aosctl"
path = "src/main.rs"

[dependencies]
adapteros-config = { path = "../adapteros-config" }
adapteros-core = { path = "../adapteros-core" }
adapteros-manifest = { path = "../adapteros-manifest" }
adapteros-registry = { path = "../adapteros-registry" }
adapteros-artifacts = { path = "../adapteros-artifacts" }
adapteros-sbom = { path = "../adapteros-sbom" }
adapteros-lora-plan = { path = "../adapteros-lora-plan" }
adapteros-crypto = { path = "../adapteros-crypto" }
adapteros-telemetry = { path = "../adapteros-telemetry" }
adapteros-policy = { path = "../adapteros-policy" }
adapteros-db = { path = "../adapteros-db" }
adapteros-client = { path = "../adapteros-client" }
adapteros-types = { path = "../adapteros-types" }
# adapteros-server = { path = "../adapteros-server" }  # Temporarily disabled
adapteros-api = { path = "../adapteros-api" }
adapteros-api-types = { path = "../adapteros-api-types" }
adapteros-lora-worker = { path = "../adapteros-lora-worker" }
adapteros-lora-rag = { path = "../adapteros-lora-rag" }
# Removed: adapteros-single-file-adapter (migrated to adapteros-aos)
adapteros-aos = { path = "../adapteros-aos" }  # Unified binary .aos format
adapteros-lora-router = { path = "../adapteros-lora-router" }
adapteros-ingest-docs = { path = "../adapteros-ingest-docs" }
adapteros-lora-kernel-api = { path = "../adapteros-lora-kernel-api" }
adapteros-lora-mlx-ffi = { path = "../adapteros-lora-mlx-ffi", optional = true }
adapteros-secd = { path = "../adapteros-secd", optional = true }
# adapteros-system-metrics = { path = "../adapteros-system-metrics" }  # Requires DATABASE_URL
adapteros-replay = { path = "../adapteros-replay" }
adapteros-trace = { path = "../adapteros-trace" }
adapteros-verify = { path = "../adapteros-verify", features = ["clap"] }
adapteros-deterministic-exec = { path = "../adapteros-deterministic-exec" }
adapteros-lora-lifecycle = { path = "../adapteros-lora-lifecycle" }
# adapteros-codegraph = { path = "../adapteros-codegraph" }  # Temporarily disabled due to SQLite conflict
clap = { workspace = true }
clap_complete = "4.4"
clap_mangen = "0.2"
dialoguer = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { workspace = true }
nix = { workspace = true }
owo-colors = "4.0"
serde_yaml = "0.9"
toml = "0.8"
tempfile = "3.8"
walkdir = "2.4"
chrono = "0.4"
hex = { workspace = true }
zip = "1.0"
fs_extra = "1.3"
sysinfo = "0.30"
sqlx = { workspace = true }
blake3 = { workspace = true }
hyper-util = "0.1"
tower = "0.4"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }
rusqlite = "0.37"
tokenizers = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
# adapteros-lora-kernel-mtl = { path = "../adapteros-lora-kernel-mtl" }  # Disabled for stable compilation

[features]
# =============================================================================
# CLI FEATURE FLAGS
# =============================================================================
# multi-backend: Enable MLX backend support in CLI commands
#   - Adds MLX FFI dependency
#   - Enables `aosctl serve --backend mlx` and related commands
#
# secd-support: Enable Secure Enclave Daemon support
#   - Adds adapteros-secd dependency
#   - Enables hardware key management commands
# =============================================================================

multi-backend = ["dep:adapteros-lora-mlx-ffi"]
secd-support = ["dep:adapteros-secd"]
