[package]
name = "adapteros-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aosctl"
path = "src/main.rs"

[dependencies]
adapteros-config = { path = "../adapteros-config" }
adapteros-core = { path = "../adapteros-core" }
adapteros-error-registry = { path = "../adapteros-error-registry" }
adapteros-manifest = { path = "../adapteros-manifest" }
adapteros-registry = { path = "../adapteros-registry" }
adapteros-artifacts = { path = "../adapteros-artifacts" }
adapteros-sbom = { path = "../adapteros-sbom" }
adapteros-lora-plan = { path = "../adapteros-lora-plan" }
adapteros-crypto = { path = "../adapteros-crypto" }
adapteros-telemetry = { path = "../adapteros-telemetry" }
adapteros-policy = { path = "../adapteros-policy" }
adapteros-db = { path = "../adapteros-db" }
adapteros-client = { path = "../adapteros-client" }
adapteros-types = { path = "../adapteros-types" }
# adapteros-server = { path = "../adapteros-server" }  # Temporarily disabled
adapteros-api = { path = "../adapteros-api" }
adapteros-api-types = { path = "../adapteros-api-types" }
adapteros-lora-worker = { path = "../adapteros-lora-worker" }
adapteros-lora-rag = { path = "../adapteros-lora-rag" }
adapteros-single-file-adapter = { path = "../adapteros-single-file-adapter" }
adapteros-aos = { path = "../adapteros-aos" }  # Unified binary .aos format
adapteros-lora-router = { path = "../adapteros-lora-router" }
adapteros-ingest-docs = { path = "../adapteros-ingest-docs" }
adapteros-lora-kernel-api = { path = "../adapteros-lora-kernel-api" }
adapteros-lora-mlx-ffi = { path = "../adapteros-lora-mlx-ffi", optional = true, features = ["mlx"] }
adapteros-secd = { path = "../adapteros-secd", optional = true }
adapteros-tui = { path = "../adapteros-tui", optional = true }
adapteros-scenarios = { path = "../adapteros-scenarios", optional = true }
# adapteros-system-metrics = { path = "../adapteros-system-metrics" }  # Requires DATABASE_URL
adapteros-replay = { path = "../adapteros-replay", optional = true }
adapteros-trace = { path = "../adapteros-trace", optional = true }
adapteros-verify = { path = "../adapteros-verify", features = ["clap"] }
adapteros-deterministic-exec = { path = "../adapteros-deterministic-exec" }
adapteros-agent-spawn = { path = "../adapteros-agent-spawn" }
adapteros-lora-lifecycle = { path = "../adapteros-lora-lifecycle" }
adapteros-platform = { path = "../adapteros-platform" }
adapteros-codegraph = { path = "../adapteros-codegraph", optional = true }
clap = { workspace = true }
clap_complete = "4.4"
clap_mangen = "0.2"
dialoguer = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { workspace = true, features = ["multipart", "cookies"] }
nix = { workspace = true }
dotenvy = "0.15"
owo-colors = "4.0"
serde_yaml = "0.9"
toml = "0.8"
tempfile = "3.8"
glob = "0.3"
walkdir = "2.4"
chrono = "0.4"
dirs = "5.0"
hex = { workspace = true }
zip = "1.0"
tar = "0.4"
zstd = { workspace = true }
fs_extra = "1.3"
sysinfo = "0.30"
sqlx = { workspace = true }
blake3 = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }
base64 = { workspace = true }
safetensors = { workspace = true }
hyper-util = "0.1"
tower = "0.4"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }
rusqlite = { workspace = true }
tokenizers = "0.15"
argon2 = "0.5"
rand = { workspace = true }
indicatif = "0.17"
adapteros-orchestrator = { path = "../adapteros-orchestrator", optional = true }
adapteros-normalization = { path = "../adapteros-normalization" }

[target.'cfg(target_os = "macos")'.dependencies]
# adapteros-lora-kernel-mtl = { path = "../adapteros-lora-kernel-mtl" }  # Disabled for stable compilation

[features]
# =============================================================================
# CLI FEATURE FLAGS
# =============================================================================
# Default: includes replay, trace, scenarios, orchestrator for backwards compat
default = ["replay", "trace", "scenarios", "orchestrator"]

# multi-backend: Enable MLX backend support in CLI commands
multi-backend = ["dep:adapteros-lora-mlx-ffi", "adapteros-lora-worker/multi-backend"]
mlx-rs-backend = ["multi-backend", "adapteros-lora-mlx-ffi/mlx-rs-backend"]
codegraph = ["dep:adapteros-codegraph"]
secd-support = ["dep:adapteros-secd"]
tui = ["dep:adapteros-tui"]
replay = ["dep:adapteros-replay"]
trace = ["dep:adapteros-trace"]
scenarios = ["dep:adapteros-scenarios"]
orchestrator = ["dep:adapteros-orchestrator"]
extended-tests = []
coreml-export = ["adapteros-lora-worker/coreml-backend"]

# Full CLI with all optional features
full = ["replay", "trace", "scenarios", "orchestrator", "codegraph", "tui"]

# Minimal CLI without optional features
minimal = []

[dev-dependencies]
axum = { version = "0.8", features = ["macros", "json"] }
serial_test = "3.1"
tokenizers = { workspace = true }
