[package]
name = "adapteros-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aosctl"
path = "src/main.rs"
[dependencies]
adapteros-config = { path = "../adapteros-config" }
adapteros-core = { path = "../adapteros-core" }
adapteros-id = { path = "../adapteros-id" }
adapteros-retrieval = { path = "../adapteros-retrieval" }
adapteros-storage = { path = "../adapteros-storage" }
adapteros-model-hub = { path = "../adapteros-model-hub" }
adapteros-error-registry = { path = "../adapteros-error-registry" }
adapteros-artifacts = { path = "../adapteros-artifacts" }
adapteros-lora-plan = { path = "../adapteros-lora-plan" }
adapteros-crypto = { path = "../adapteros-crypto" }
adapteros-telemetry = { path = "../adapteros-telemetry" }
adapteros-replay = { path = "../adapteros-replay", optional = true }
adapteros-trace = { path = "../adapteros-trace", optional = true }
adapteros-policy = { path = "../adapteros-policy" }
adapteros-db = { path = "../adapteros-db" }
adapteros-client = { path = "../adapteros-client" }
adapteros-types = { path = "../adapteros-types" }
# adapteros-server = { path = "../adapteros-server" }  # Temporarily disabled
adapteros-api-types = { path = "../adapteros-api-types" }
adapteros-api = { path = "../adapteros-api" }
adapteros-lora-worker = { path = "../adapteros-lora-worker", default-features = false }
adapteros-embeddings = { path = "../adapteros-embeddings", features = ["training"] }
adapteros-aos = { path = "../adapteros-aos" }  # Unified binary .aos format
adapteros-lora-router = { path = "../adapteros-lora-router" }
adapteros-ingest-docs = { path = "../adapteros-ingest-docs" }
adapteros-lora-kernel-api = { path = "../adapteros-lora-kernel-api" }
adapteros-lora-mlx-ffi = { path = "../adapteros-lora-mlx-ffi", optional = true, features = ["mlx"] }
adapteros-secd = { path = "../adapteros-secd", optional = true }
adapteros-tui = { path = "../adapteros-tui", optional = true }
# adapteros-system-metrics = { path = "../adapteros-system-metrics" }  # Requires DATABASE_URL
adapteros-verify = { path = "../adapteros-verify", features = ["clap"] }
adapteros-deterministic-exec = { path = "../adapteros-deterministic-exec" }
adapteros-agent-spawn = { path = "../adapteros-agent-spawn" }
adapteros-lora-lifecycle = { path = "../adapteros-lora-lifecycle" }
adapteros-scenarios = { path = "../adapteros-scenarios" }
clap = { workspace = true }
clap_complete = "4.4"
clap_mangen = "0.2"
dialoguer = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30"
crossterm = "0.28"
reqwest = { workspace = true, features = ["multipart", "cookies"] }
nix = { workspace = true }
dotenvy = "0.15"
owo-colors = "4.0"
serde_yaml = "0.9"
toml = "0.8"
tempfile = "3.8"
glob = "0.3"
regex = { workspace = true }
walkdir = "2.4"
chrono = "0.4"
dirs = "5.0"
hex = { workspace = true }
zip = "1.1"
tar = "0.4"
zstd = { workspace = true }
fs_extra = "1.3"
sysinfo = { workspace = true }
sqlx = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }
base64 = { workspace = true }
safetensors = { workspace = true }
hyper-util = "0.1"
tower = { workspace = true }
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }
rusqlite = { workspace = true }
tokenizers = { workspace = true }
argon2 = "0.5"
rand = { workspace = true }
indicatif = "0.17"
adapteros-orchestrator = { path = "../adapteros-orchestrator", optional = true }
git2 = { workspace = true }
parking_lot = { workspace = true }
[target.'cfg(target_os = "macos")'.dependencies]
# adapteros-lora-kernel-mtl = { path = "../adapteros-lora-kernel-mtl" }  # Disabled for stable compilation
adapteros-lora-kernel-coreml = { path = "../adapteros-lora-kernel-coreml", optional = true }
[features]
# =============================================================================
# CLI FEATURE FLAGS
# Default: includes replay, trace, scenarios, orchestrator for backwards compat
default = ["replay", "trace", "orchestrator"]
# multi-backend: Enable MLX backend support in CLI commands
multi-backend = ["dep:adapteros-lora-mlx-ffi", "adapteros-lora-worker/multi-backend"]
codegraph = []
secd-support = ["dep:adapteros-secd"]
tui = ["dep:adapteros-tui"]
replay = ["dep:adapteros-replay"]
trace = ["dep:adapteros-trace"]
orchestrator = ["dep:adapteros-orchestrator"]
scenarios = []
extended-tests = []
coreml-export = ["adapteros-lora-worker/coreml-backend"]
# CoreML backend feature - enables CoreML runtime support in worker backend selection
coreml-backend = ["dep:adapteros-lora-kernel-coreml", "adapteros-lora-worker/coreml-backend"]
# Full CLI with all optional features
full = ["replay", "trace", "orchestrator", "codegraph", "tui"]
# Minimal CLI without optional features
minimal = []
[dev-dependencies]
ahash = { workspace = true }
axum = { version = "0.8", features = ["macros", "json"] }
serial_test = "3.1"
tokenizers = { workspace = true }
