[package]
name = "adapteros-codegraph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adapteros-core = { path = "../adapteros-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = "=0.20.10"
tree-sitter-rust = "=0.20.3"
tree-sitter-python = "=0.20.3"
tree-sitter-typescript = "=0.20.3"
tree-sitter-javascript = "=0.20.0"
tree-sitter-go = "=0.20.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { workspace = true, features = ["fs"] }
walkdir = { workspace = true }
bincode = { workspace = true }
blake3 = "1.8"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
regex = "1.10"
toml = "0.8"
git2 = "0.18"

[[bin]]
name = "codegraph"
path = "src/bin/codegraph.rs"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
env_logger = "0.10"
