[package]
name = "adapteros-codegraph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adapteros-core = { path = "../adapteros-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = "0.24.5"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true, features = ["fs"] }
walkdir = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
streaming-iterator = "0.1"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
regex = "1.10"
toml = "0.8"
git2 = "0.18"

[[bin]]
name = "codegraph"
path = "src/bin/codegraph.rs"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
env_logger = "0.11"
