[package]
name = "adapteros-codegraph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Thin wrapper around adapteros-retrieval::codegraph for backwards compatibility"

[dependencies]
# Core dependencies - re-exports from retrieval
adapteros-core = { path = "../adapteros-core" }
adapteros-retrieval = { path = "../adapteros-retrieval" }

# Binary dependencies
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }

[[bin]]
name = "aos-codegraph"
path = "src/bin/codegraph.rs"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
