[package]
name = "adapteros-concurrent-fs"
version = "0.1.0"
edition = "2021"
authors = ["AdapterOS Team"]
description = "Concurrent filesystem operations with locking and conflict resolution for AdapterOS"
license = "MIT OR Apache-2.0"

[dependencies]
adapteros-core = { path = "../adapteros-core" }
tokio = { version = "1.0", features = ["fs", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"
