[package]
name = "adapteros-config"
version = "0.2.0"
edition = "2021"
description = "Deterministic configuration system with precedence enforcement"
authors = ["adapterOS Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/adapteros/adapteros"
keywords = ["config", "deterministic", "precedence"]
categories = ["configuration"]

[features]
extended-tests = []
# Enable test utilities (TestEnvGuard) for external crates
testkit = []
[dependencies]
adapteros-core = { path = "../adapteros-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
blake3 = { workspace = true }
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
[dev-dependencies]
tempfile = { workspace = true }
