[package]
name = "adapteros-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
serde_jcs = { workspace = true }
schemars = { workspace = true, optional = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
lazy_static = "1.4"
tracing = { workspace = true }
rand = { workspace = true, optional = true }
rusqlite = { workspace = true }
sqlx = { workspace = true, optional = true }
zip = "1.1"
regex = { workspace = true }
once_cell = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }

[features]
default = ["schemars-support"]
test-utils = ["rand"]
schemars-support = ["schemars"]
sqlx = ["dep:sqlx"]

[lib]
name = "adapteros_core"
path = "src/lib.rs"
