[package]
name = "adapteros-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adapteros-types = { path = "../adapteros-types" }
anyhow = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
serde_jcs = { workspace = true }
schemars = { workspace = true, optional = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
lazy_static = "1.4"
tracing = { workspace = true }
rand = { workspace = true, optional = true }
rusqlite = { workspace = true }
sqlx = { workspace = true, optional = true }
zip = "1.1"
regex = { workspace = true }
once_cell = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
fastrand = "2.0"

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
criterion = "0.5"
tempfile = "3.8"

[features]
default = ["schemars-support"]
test-utils = ["rand"]
schemars-support = ["schemars"]
sqlx = ["dep:sqlx"]
utoipa = ["dep:utoipa"]
async = []

[dependencies.utoipa]
version = "5.4"
optional = true

[lib]
name = "adapteros_core"
path = "src/lib.rs"

# BLAKE3 and HKDF performance benchmarks
[[bench]]
name = "hash_benchmarks"
harness = false
