[package]
name = "adapteros-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adapteros-types = { path = "../adapteros-types" }
adapteros-error-registry = { path = "../adapteros-error-registry" }
anyhow = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = "1.0"
serde_jcs = { workspace = true }
schemars = { workspace = true, optional = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
lazy_static = "1.4"
tracing = { workspace = true }
rand = { workspace = true, optional = true }
rusqlite = { workspace = true }
sqlx = { workspace = true, optional = true }
zip = "1.1"
regex = { workspace = true }
once_cell = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { workspace = true, optional = true }
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
fastrand = "2.0"
parking_lot = { workspace = true }
dashmap = "5.5"
unicode-normalization = "0.1"
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
fs2 = { workspace = true }
walkdir.workspace = true
[target.'cfg(unix)'.dependencies]
libc = "0.2"
[dev-dependencies]
futures = "0.3"
proptest = { workspace = true }
rand = { workspace = true }
criterion = "0.5"
tempfile = "3.8"
[features]
default = ["schemars-support"]
test-utils = ["rand"]
schemars-support = ["schemars"]
sqlx = ["dep:sqlx"]
utoipa = ["dep:utoipa"]
async = []
coreml-backend = []
multi-backend = []  # MLX primary with CoreML fallback
evidence-signing = ["ed25519-dalek"]
# Workspace feature passthroughs for build_info.rs
# These are defined at workspace level and enabled via workspace dependencies
deterministic-only = []
telemetry = []
metrics = []
replay = []
backend-mlx = []
backend-coreml = []
backend-metal = []
impl-mlx-rs = []
impl-mlx-bridge = []
profile-production = []
profile-development = []
test-extended = []
test-loom = []
federation = []
secure-enclave = []
mlx = []
metal-backend = []
mlx-bridge = []
[dependencies.utoipa]
version = "5.4"
optional = true
[lib]
name = "adapteros_core"
path = "src/lib.rs"
# BLAKE3 and HKDF performance benchmarks
[[bench]]
name = "hash_benchmarks"
harness = false
[[test]]
name = "canonical_bytes_proptest"
path = "proptest/canonical_bytes.rs"
